Revert "Fix wrapping of opening hours"
This reverts commit b188c1837a95b289e372c44ae0f659968d2531e9.

--- a/css/style.css
+++ b/css/style.css
@@ -180,7 +180,3 @@ a > .portrait-well:hover {
 .preliminary {
     color: #ec580f;
 }
-
-.opening-hours td {
-    vertical-align: top;
-}
